force-app/main/default/objects/Activity/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <formula>Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName</formula>
    <label>Assigned To</label>
    <type>Text</type>
</CustomField>