force-app/main/default/objects/Activity/fields/Assigned_To_Role__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_Role__c</fullName>
    <formula>Owner:User.UserRole.Name</formula>
    <label>Assigned To Role</label>
    <type>Text</type>
</CustomField>