force-app/main/default/objects/Activity/fields/rcsfl__CALL_UNIQUE_ID__c.field-meta.xml
<CustomField>
    <fullName>rcsfl__CALL_UNIQUE_ID__c</fullName>
    <externalId>true</externalId>
    <label>CALL_UNIQUE_ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>