force-app/main/default/objects/Activity/fields/rcsfl__CALL_UUID__c.field-meta.xml
<CustomField>
    <fullName>rcsfl__CALL_UUID__c</fullName>
    <externalId>true</externalId>
    <label>CALL_UUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>