force-app/main/default/objects/Activity/fields/rcsfl__external_whoid__c.field-meta.xml
<CustomField>
    <fullName>rcsfl__external_whoid__c</fullName>
    <label>external_whoid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>