force-app/main/default/objects/Activity/fields/rcsfl__key__c.field-meta.xml
<CustomField>
    <fullName>rcsfl__key__c</fullName>
    <label>key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>