force-app/main/default/objects/Activity/fields/rcsfl__Recording_Information__c.field-meta.xml
<CustomField>
    <fullName>rcsfl__Recording_Information__c</fullName>
    <label>Recording Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>