force-app/main/default/objects/Activity/fields/RingCentral__RC_Logging_Type__c.field-meta.xml
<CustomField>
    <fullName>RingCentral__RC_Logging_Type__c</fullName>
    <label>RC Logging Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>